# arx

./: .mcp.json  Cargo.toml  README.md  install.ps1  install.sh  package.json  skills
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
.omp/: mcp.json
crates/arx-cli/: Cargo.toml
crates/arx-cli/src/: main.rs
crates/arx-cli/tests/: metadata_db_cli.rs  version_flags.rs
crates/arx-core/: Cargo.toml
crates/arx-core/src/: arxiv.rs  daemon.rs  lib.rs  material_index.rs  metadata_db.rs  paths.rs  rate_limit.rs  search.rs
crates/arx-mcp/: Cargo.toml
crates/arx-mcp/src/: main.rs  mcp_server.rs
crates/arx-mcp/tests/: version_flags.rs
crates/arxd/: Cargo.toml
crates/arxd/src/: main.rs
crates/arxd/tests/: version_flags.rs
plugins/arx/: .claude-mcp.json  .mcp.json  README.md  __init__.py  after-install.md  package.json  plugin.yaml
plugins/arx/.claude-plugin/: plugin.json
plugins/arx/.codex-plugin/: plugin.json
plugins/arx/scripts/: launch-arx-mcp.sh
plugins/arx/skills/arx-full-text-search/: SKILL.md
plugins/arx/skills/arx-paper-fetch/: SKILL.md
plugins/hermes-arx/: README.md
plugins/hermes-arx/skills/arx-paper-metadata/: SKILL.md
scripts/: validate_plugins.py
src/: arxiv.rs  lib.rs  main.rs  mcp_server.rs  paths.rs  rate_limit.rs  setup.rs
