[workspace]
members = [
    "crates/arx-core",
    "crates/arx-cli",
    "crates/arx-mcp",
    "crates/arxd",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/eric-tramel/arx"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
flate2 = "1.0"
fs2 = "0.4"
indicatif = "0.17"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rmcp = { version = "0.16", features = ["server", "macros", "schemars", "transport-io"] }
roxmltree = "0.20"
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"
tantivy = "=0.26.1"
tar = "0.4"
tempfile = "3.14"
tokio = { version = "1.48", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
