[package]
name = "arx-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stdio MCP server for cached arXiv paper retrieval"

[[bin]]
name = "arx-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arx-core = { path = "../arx-core" }
clap.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
