[package]
name = "arxd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local arx daemon for queued arXiv downloads and metadata indexing"

[[bin]]
name = "arxd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arx-core = { path = "../arx-core" }
clap.workspace = true
fs2.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
